examples/negative/stage1_rejections/effect_decl.kai
# Negative fixture (#511 / stage1 rejection): `effect` declarations
# are stage-2-only. kaic1 must reject cleanly with a parser-level
# diagnostic, not a segfault or stack overflow.

effect Io { print_io(s: String) : Unit }

fn main() : Int = 0
